--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "name": "wanderspot",
   "version": "1.0.0",
