--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.15.2",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.9",
@@ -15,7 +16,9 @@
   "name": "wanderspot",
   "version": "1.0.0",
   "main": "app.js",
+  
   "scripts": {
+    "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
